      The binary is getting a little smaller again. I did not expect that :-)
  BF: Generator: Correction when parsing structures
      Structures deeper 65535 levels no longer cause an exception.
  BF: SAPI: Correction of passed context to constructor
      Until now the context always ended with section :INI -- that was wrong.
  BF: HTTP(S): Added status 301 in the list of status codes
  CR: Build: Releases are now only available on the release page
  CR: License: Changed to Apache License Version 2.0
  CR: Service: Added configuration file as optional program argument for startup
      Usage: devwex [start] [ini file]
  CR: SAPI: Constructors for servers support alternative signature(s)
      Server(String context, Object initialize)
      Server(String context, Initialize initialize)

5.4.0 20210411
  BF: HTTP(S) Server Status: Update of class 4xx
  BF: HTTP(S) CGI: Correction of REQUEST_URI
      Without normalization/decoding (unchanged as received from the client)
  BF: HTTP(S) CGI: Correction of SCRIPT_URI / SCRIPT_URL
      Without normalization/decoding (unchanged as received from the client)
  BF: Service: Optimization / correction of Service::Print
  BF: Documentation: Update / corrections
  CR: HTTP(S) CGI: Output of the error pipe of the CGI process
  CR: HTTP(S) CGI: PATH_CONTEXT replaces PATH_ABSOLUTE (omitted)
  CR: Build: Target release replaced archive (omitted)
  CR: Windows: Integration and merge of Seanox Devwex Service project
      Maintenance, build and release of the Windows service integrated into this project.
      The implementation of the service has been completely revised.

5.3.0 20200831
  BF: HTTP(S) AccessLog: Correction in the file name of the log file (use http_host instead of remote_host)
  BF: HTTP(S) Content Types: Correction of xml/xsl/xslt to use application/xslt+xml
  BF: HTTP(S) Request: Correction of the request validation
      In some cases the request is aborted with status 400 when the network connector is busy,